@@ -1,0 +1,21 @@
+/* XPM */
+static char * smile_sad_xpm[] = {
+"20 15 3 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFF00",
+"       ......       ",
+"      ..++++..      ",
+"     ..++++++..     ",
+"    ..++++++++..    ",
+"   ..+++.++.+++..   ",
+"   .++++.++.++++.   ",
+"   .++++++++++++.   ",
+"   .++++++++++++.   ",
+"   .++++++++++++.   ",
+"   ..+++....+++..   ",
+"    ..+.++++.+..    ",
+"     ..++++++..     ",
+"      ..++++..      ",
+"       ......       ",
+"                    "};
